--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
     <properties>
         <java.version>1.8</java.version>
         <junit.version>4.13</junit.version>
+        <jedis.version>3.3.0</jedis.version>
         <mysql.version>8.0.11</mysql.version>
         <quartz.version>2.3.2</quartz.version>
     </properties>
@@ -62,9 +63,11 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>${jedis.version}</version>
         </dependency>
+
 
         <!--<dependency>
             <groupId>org.springframework.boot</groupId>
