--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <jedis.version>3.3.0</jedis.version>
         <mysql.version>8.0.11</mysql.version>
         <quartz.version>2.3.2</quartz.version>
+        <fastjson.version>1.2.74</fastjson.version>
     </properties>
 
     <dependencies>
@@ -68,11 +69,11 @@
             <version>${jedis.version}</version>
         </dependency>
 
-
-        <!--<dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>${fastjson.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -112,6 +113,12 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
         </dependency>
 
 
