--- a/seckill-system-common/pom.xml
+++ b/seckill-system-common/pom.xml
@@ -22,6 +22,13 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.74</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
